syntax = "proto3";

package key;

import "google/protobuf/timestamp.proto";


option go_package = "github.com/karimiku/smart-stay-platform/pkg/genproto/key";

// KeyService manages the issuance and revocation of digital keys.
// It abstracts the underlying IoT device APIs, providing a unified interface for key management.
service KeyService {
  // Generates a digital key code for a specific reservation.
  // The key will be valid only during the specified time window.
  rpc GenerateKey(GenerateKeyRequest) returns (GenerateKeyResponse);

  // Immediately revokes a digital key.
  // This is a synchronous operation used for security-critical actions like check-out.
  rpc RevokeKey(RevokeKeyRequest) returns (RevokeKeyResponse);

  // Retrieves all keys for a specific user.
  rpc ListKeys(ListKeysRequest) returns (ListKeysResponse);
}

// The request message for key generation.
message GenerateKeyRequest {
  string reservation_id = 1;
  google.protobuf.Timestamp valid_from = 2;
  google.protobuf.Timestamp valid_until = 3;
}

// The response message containing the generated key details.
message GenerateKeyResponse {
  string key_code = 1;
  string device_id = 2;
}

// The request message for key revocation.
message RevokeKeyRequest {
  string reservation_id = 1;
}

// The response message for key revocation.
message RevokeKeyResponse {
  bool success = 1;
}

// The request message for listing keys.
message ListKeysRequest {
  string user_id = 1; // UUID
}

// The response message containing the list of keys.
message ListKeysResponse {
  repeated Key keys = 1;
}

// Represents a digital key with its validity period.
message Key {
  string key_code = 1;
  string device_id = 2;
  string reservation_id = 3;
  google.protobuf.Timestamp valid_from = 4;
  google.protobuf.Timestamp valid_until = 5;
}